--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -1,6 +1,16 @@
 <div class="contents row">
   <% @infos.each do |info| %>
     <div class="content_post" style="background-image: url(<%= info.image %>);">
+    <%# 削除ボタンを追加 %>
+          <div class="more">
+        <span><%= image_tag 'arrow_top.png' %></span>
+        <ul class="more_list">
+          <li>
+            <%= link_to '削除', info_path(info.id), method: :delete %>
+          </li>
+        </ul>
+      </div>
+      <%#// 削除ボタンを追加 %>
       <p><%= info.text %></p>
       <span class="name">
         <%= info.name %>
