--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,19 @@
     <header class="header">
       <div class="header__bar row">
         <h1 class="grid-6"><a href="/">Gurugu</a></h1>
-        <div class="user_nav grid-6">
-          <a class="post" href="/infos/new">投稿する</a>
-        </div>
+        <%# ログイン状態かどうかで表示を切り替る %>
+        <% if user_signed_in? %>
+          <div class="user_nav grid-6">
+            <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+            <%= link_to "投稿する", new_info_path, class: "post" %>
+          </div>
+        <% else %>
+          <div class="grid-6">
+            <%= link_to "ログイン", new_user_session_path, class: "post" %>
+            <%= link_to "新規登録", new_user_registration_path, class: "post" %>
+          </div>
+        <% end %>
+        <%#// ログイン状態かどうかで表示を切り替る %>
       </div>
     </header>
     <%= yield %>
