--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,16 @@
         <%# ログイン状態かどうかで表示を切り替る %>
         <% if user_signed_in? %>
           <div class="user_nav grid-6">
-            <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+          <%# 現在ログインしているニックネームを表示 %>
+          <span><%= current_user.nickname %> 
+          <%# //現在ログインしているニックネームを表示 %>
+            <ul class="user__info">
+              <li>
+                <%= link_to "マイページ", "/users/#{current_user.id}" %>
+                <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+              </li>
+            </ul>
+          </span>
             <%= link_to "投稿する", new_info_path, class: "post" %>
           </div>
         <% else %>
