投稿者本人のみに編集・削除許可、表示順並べ替え

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -8,12 +8,18 @@
           <li>
             <%= link_to '詳細', info_path(info.id), method: :get %>
           </li>
+
+<%# 「ユーザーがログインしている」かつ「投稿したユーザーである投稿だけに許可」 %>
+          <% if user_signed_in? && current_user.id == info.user_id %>
           <li>
             <%= link_to '編集', edit_info_path(info.id), method: :get %>
           </li>
           <li>
             <%= link_to '削除', info_path(info.id), method: :delete %>
           </li>
+          <% end %>
+<%#// 「ユーザーがログインしている」かつ「投稿したユーザーである投稿だけに許可」 %>
+
         </ul>
       </div>
       <%#// 詳細、編集、削除ボタンを追加 %>
