--- a/app/views/infos/show.html.erb
+++ b/app/views/infos/show.html.erb
@@ -1,5 +1,8 @@
 <div class="contents row">
   <div class="content_post" style="background-image: url(<%= @info.image %>);">
+
+<%# ログイン中ユーザーが投稿したツイートには、詳細ボタンに加えて「編集・削除ボタン」が表示 %>
+    <% if user_signed_in? && current_user.id == @info.user_id %>
     <div class="more">
       <span><%= image_tag 'arrow_top.png' %></span>
       <ul class="more_list">
@@ -11,6 +14,9 @@
         </li>
       </ul>
     </div>
+    <% end %>
+<%# ログイン中ユーザーが投稿したツイートには、詳細ボタンに加えて「編集・削除ボタン」が表示 %>
+
     <p><%= @info.text %></p>
     <span class="name">
       <a href="/users/<%= @info.user.id %>">
