--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,47 +1,50 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Gurugu</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+    <head>
+        <title>Gurugu</title>
+        <%= csrf_meta_tags %>
+        <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+        <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track':
+        'reload' %>
+        <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    </head>
 
-  <body>
-    <header class="header">
-      <div class="header__bar row">
-        <h1 class="grid-6"><a href="/">Gurugu</a></h1>
-        <%# ログイン状態かどうかで表示を切り替る %>
-        <% if user_signed_in? %>
-          <div class="user_nav grid-6">
-          <%# 現在ログインしているニックネームを表示 %>
-          <span><%= current_user.nickname %> 
-          <%# //現在ログインしているニックネームを表示 %>
-            <ul class="user__info">
-              <li>
-                <%= link_to "マイページ", "/users/#{current_user.id}" %>
-                <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-              </li>
-            </ul>
-          </span>
-            <%= link_to "投稿する", new_info_path, class: "post" %>
-          </div>
-        <% else %>
-          <div class="grid-6">
-            <%= link_to "ログイン", new_user_session_path, class: "post" %>
-            <%= link_to "新規登録", new_user_registration_path, class: "post" %>
-          </div>
-        <% end %>
-        <%#// ログイン状態かどうかで表示を切り替る %>
-      </div>
-    </header>
-    <%= yield %>
-    <footer>
-      <p>
-        Gurugu
-      </p>
-    </footer>
-  </body>
-</html>
+    <body>
+        <header class="header">
+            <div class="header__bar row">
+                <h1 class="grid-6">
+                    <a href="/">Gurugu</a>
+                </h1>
+                <%# ログイン状態かどうかで表示を切り替る %>
+                    <% if user_signed_in? %>
+                        <div class="user_nav grid-6">
+                            <%# 現在ログインしているニックネームを表示 %>
+                                <span><%= current_user.nickname %>
+                                    <%# //現在ログインしているニックネームを表示 %>
+                                        <ul class="user__info">
+                                            <li>
+                                                <%= link_to "マイページ", "/users/#{current_user.id}" %>
+                                                <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+                                            </li>
+                                        </ul>
+                                    </span>
+                                    <%= link_to "投稿する", new_info_path, class: "post" %>
+                                </div>
+                            <% else %>
+                                <div class="grid-6">
+                                    <%= link_to "ログイン", new_user_session_path, class: "post" %>
+                                    <%= link_to "新規登録", new_user_registration_path, class: "post" %>
+                                </div>
+                            <% end %>
+                            <%#// ログイン状態かどうかで表示を切り替る %>
+                            </div>
+                        </header>
+                        <%= yield %>
+                        <footer>
+                            <p>
+                                Gurugu
+                            </p>
+                        </footer>
+                    </body>
+                </html>
