edit, show, new 部分パレット

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,8 +2,9 @@
     <div class="contents row">
         <p><%= @nickname %>さんの投稿一覧</p>
         <% @infos.each do |info| %>
-            <div class="content_post" style="background-image: url(<%= info.image %>);">
-                <p><%= info.text %></p>
-            </div>
+
+        <%# マイページに部分テンプレートを適用 %>
+            <%= render partial: "infos/info", locals: { info: info } %>
+        <%#// マイページに部分テンプレートを適用 %>    
         <% end %>
     </div>
