--- a/app/views/infos/show.html.erb
+++ b/app/views/infos/show.html.erb
@@ -15,7 +15,7 @@
                     </ul>
                 </div>
             <% end %>
-            <%# ログイン中ユーザーが投稿したツイートには、詳細ボタンに加えて「編集・削除ボタン」が表示 %>
+            <%#// ログイン中ユーザーが投稿したツイートには、詳細ボタンに加えて「編集・削除ボタン」が表示 %>
 
                 <p><%= @info.text %></p>
                 <span class="name">
@@ -24,4 +24,34 @@
                     </a>
                 </span>
             </div>
-        </div>
+
+            <%# コメント投稿用のフォーム %>
+                <div class="container">
+                    <% if user_signed_in? %>
+                        <%= form_with(model: [@info, @comment], local: true) do |form| %>
+                        <%= form.text_area :text, placeholder: "コメントする", rows: "2" %>
+                        <%= form.submit "SEND" %>
+                    <% end %>
+                <% else %>
+                    <strong>
+                        <p>※※※ コメントの投稿には新規登録/ログインが必要です ※※※</p>
+                    </strong>
+                <% end %>
+                <%#// コメント投稿用のフォーム %>
+                <%# モデルを利用してコメントの情報を取得 %>
+                                    <div class="comments">
+                        <h4>＜コメント一覧＞</h4>
+                        <% @comments.each do |comment| %>
+                        <%# @commentsには複数のコメントのレコードが入っているので、配列の形 %>
+                        <%# ビューに表示させるためにはeachメソッドを使って、ひとつひとつのレコードに分解してから表示 %>
+                            <p>
+                                <strong><%= link_to comment.user.nickname, "/users/#{comment.user_id}" %>：</strong>
+                                <%# コメントしたユーザーの名前をクリックしたら、そのユーザーのマイページへ遷移 %>
+                                <%= comment.text %>
+                            </p>
+                        <% end %>
+                    </div>
+
+                <%#// モデルを利用してコメントの情報を取得 %>
+                </div>
+            </div>
