--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -1,6 +1,12 @@
-<div class="contents row">
-    <% @infos.each do |info| %>
-        <%= render partial: "info", locals: { info: info } %> 
-        <%# 部分テンプレート内において,infoという文字列の代入されたinfo変数が使えるようにする。 %>
-    <% end %>
-</div>
+<%# 検索の入力欄とボタン %>
+    <%= form_with(url: search_infos_path, local: true, method: :get, class:
+    "search-form") do |form| %>
+    <%= form.text_field :keyword, placeholder: "投稿を検索する", class: "search-input" %>
+    <%= form.submit "検索", class: "search-btn" %>
+<% end %>
+<%#// 検索の入力欄とボタン %>
+    <div class="contents row">
+        <% @infos.each do |info| %>
+            <%= render partial: "info", locals: { info: info } %>
+            <%# 部分テンプレート内において,infoという文字列の代入されたinfo変数が使えるようにする。 %><% end %>
+        </div>
