--- a/app/views/infos/_form.html.erb
+++ b/app/views/infos/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_with(model: info, local: true) do |form| %>
+    <%= form.text_area :title, placeholder: "title", rows: "1" %>
     <%= form.text_field :image, placeholder: "Image Url" %>
     <%= form.text_area :text, placeholder: "text", rows: "10" %>
     <%= form.submit "SEND" %>
