--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -1,8 +1,8 @@
 <%# 検索の入力欄とボタン %>
     <%= form_with(url: search_infos_path, local: true, method: :get, class:
     "search-form") do |form| %>
-    <%= form.text_field :keyword, placeholder: "投稿を検索する", class: "search-input" %>
-    <%= form.submit "検索", class: "search-btn" %>
+    <%= form.text_field :keyword, placeholder: "お知らせを探す", class: "search-input" %>
+    <%= form.submit "探す", class: "search-btn" %>
 <% end %>
 <%#// 検索の入力欄とボタン %>
     <div class="contents row">
