--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
         <header class="header">
             <div class="header__bar row">
                 <h1 class="grid-6">
-                    <a href="/">Gurugu</a>
+                    <a href="/">回覧板</a>
                 </h1>
                 <%# ログイン状態かどうかで表示を切り替る %>
                     <% if user_signed_in? %>
@@ -43,7 +43,7 @@
                         <%= yield %>
                         <footer>
                             <p>
-                                Gurugu
+                                GURUGURU Ver1.0.0
                             </p>
                         </footer>
                     </body>
