--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -703,16 +703,17 @@ form input[type="submit"] {
   transition-timing-function: linear;
 }
 
+/* headerのログイン、ログアウトボタン部分 */
 .btn,
 header.header div.header__bar.row div.grid-6 a.post {
   padding: 8px 20px;
-  font-size: 14px;
+  font-size: 18px;
   border: 2px solid #57C3E9;
   color: #57C3E9;
   font-weight: bold;
   text-align: center;
   border-radius: 3px;
-  display: inline-block;
+  /* display: inlin e-block; */
 }
 
 .btn:hover,
@@ -752,7 +753,7 @@ header.header div.header__bar.row {
 }
 
 header.header div.header__bar.row h1.grid-6 {
-  font-size: 20px;
+  font-size: 35px;
   line-height: 41px;
   float: left;
 }
