--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
                                 </div>
                             <% else %>
                                 <div class="grid-6">
-                                    <%= link_to "ログイン", new_user_session_path, class: "post" %>
+                                    <%= link_to "住民の方はこちら", new_user_session_path, class: "post" %>
                                     <%= link_to "新規登録", new_user_registration_path, class: "post" %>
                                 </div>
                             <% end %>
