ヘッダーのボタン修正

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -509,8 +509,9 @@ ul li {
   width: 39.86667%;
 }
 
+/* ログイン・新規会員ボタンの幅 */
 .row .grid-6 {
-  width: 48.2%;
+  /* width: 48.2%; */ 
 }
 
 .row .grid-7 {
