--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -662,8 +662,8 @@ body {
 }
 
 a {
-  text-decoration: none;
-  color: #666;
+  text-decoration: none; /*回覧板*/
+  color: #f9fd02;;
 }
 
 a:hover {
@@ -709,8 +709,8 @@ form input[type="submit"] {
 header.header div.header__bar.row div.grid-6 a.post {
   padding: 8px 20px;
   font-size: 18px;
-  border: 2px solid #57C3E9;
-  color: #57C3E9;
+  border: 2px solid #f9fd02;
+  color: #f9fd02;
   font-weight: bold;
   text-align: center;
   border-radius: 3px;
@@ -740,7 +740,7 @@ header.header div.header__bar.row div.grid-6 a.post:hover {
 header.header {
   padding: 10px;
   border-bottom: 1px solid #D8D8D8;
-  background-color: #fff;
+  background-color: rgb(5, 4, 4); /*header 背景色*/
   position: fixed;
   top: 0;
   left: 0;
@@ -1000,10 +1000,10 @@ form textarea {
 }
 
 form input[type="submit"] {
-  background-color: #57C3E9;
+  background-color: #f9fd02; /*検索ボタン*/
   border-radius: 20px;
-  color: #fff;
-  border: 0;
+  color:#000;
+  border: 20;
   font-size: 18px;
 }
 
