CSSデザイン修正

--- a/app/views/infos/_form.html.erb
+++ b/app/views/infos/_form.html.erb
@@ -2,5 +2,5 @@
     <%= form.text_area :title, placeholder: "title", rows: "1" %>
     <%= form.text_field :image, placeholder: "Image Url" %>
     <%= form.text_area :text, placeholder: "text", rows: "10" %>
-    <%= form.submit "SEND" %>
+    <%= form.submit "お知らせ作成" %>
 <% end %>
