--- a/app/views/infos/search.html.erb
+++ b/app/views/infos/search.html.erb
@@ -1,6 +1,6 @@
 <%# 検索結果画面のビュー %>
 <%= form_with(url: search_infos_path, local: true, method: :get, class: "search-form") do |form| %>
-  <%= form.text_field :keyword, placeholder: "投稿を検索する", class: "search-input" %>
+  <%= form.text_field :keyword, placeholder: "お知らせを探す", class: "search-input" %>
   <%= form.submit "検索", class: "search-btn" %>
 <% end %>
 <div class="contents row">
