--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
                         <%# //現在ログインしているニックネームを表示 %>
                             <%= link_to "マイページ", "/users/#{current_user.id}" %>
                             <%= link_to "投稿する", new_info_path, class: "post" %>
-                            <%= link_to "町内会費支払い", new_info_path, class: "post" %>
+                            <%= link_to "町内会費支払い", credit_card_payments_path, class: "get" %>
                             <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
 
                         </div>
