--- a/app/views/infos/_form.html.erb
+++ b/app/views/infos/_form.html.erb
@@ -1,6 +1,8 @@
 <%= form_with(model: info, local: true) do |form| %>
-    <%= form.text_area :title, placeholder: "title", rows: "1" %>
-    <%= form.text_field :image, placeholder: "Image Url" %>
-    <%= form.text_area :text, placeholder: "text", rows: "10" %>
-    <%= form.submit "お知らせ作成" %>
+
+<%= form.text_area :title, placeholder: "お知らせタイトル", rows: "1" %>
+
+<%= form.text_area :text, placeholder: "お知らせ内容", rows: "10" %><br><br>
+添付画像ある場合、ファイル選択を押してください。<%= form.file_field :local_image %>
+<%= form.submit "お知らせ作成" %>
 <% end %>
