--- a/app/views/infos/create.html.erb
+++ b/app/views/infos/create.html.erb
@@ -1,6 +1,6 @@
 <div class="contents row">
     <div class="success">
-        <h3>投稿が完了しました。</h3>
-        <a class="btn" href="/">投稿一覧へ戻る</a>
+        <h3>お知らせ投稿が完了しました。</h3>
+        <a class="btn" href="/">お知らせ投稿一覧へ戻る</a>
     </div>
 </div>
