--- a/app/views/infos/_footer.html.erb
+++ b/app/views/infos/_footer.html.erb
@@ -1,3 +1,16 @@
 <div class="footer_logo">
     <p>GURUGURU Ver1.0.0</p>
+    <%# <div class="content"> %>
+    <input type="button" value="印刷" onclick="window.print();" />
+  <ul class="size">
+    <li class="size-btn small">
+      <button>小</button>
+    </li><!-- /.size-btn -->
+    <li class="size-btn medium">
+      <button>中</button>
+    </li><!-- /.size-btn -->
+    <li class="size-btn large">
+      <button>大</button>
+    </li><!-- /.size-btn -->
+  </ul><!-- /.size -->
 </div>
