--- a/app/views/infos/new.html.erb
+++ b/app/views/infos/new.html.erb
@@ -1,6 +1,6 @@
 <div class="contents">
     <div class="container">
-        <h3>投稿する</h3>
+        <h3>お知らせ投稿</h3>
         <%= render partial: "form", locals: { info: @info } %>
     </div>
 </div>
