お知らせ表示　入力のまま表示　コード整理

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -14,7 +14,7 @@
     <%= form.submit "探す", class: "search-btn" %>
 <% end %>
 <%#// 検索の入力欄とボタン %>
-    <div class="contents row">
+    <div class="contents">
         <% @infos.each do |info| %>
             <%= render partial: "info", locals: { info: info } %>
             <%# 部分テンプレート内において,infoという文字列の代入されたinfo変数が使えるようにする。 %><% end %>
