--- a/app/views/infos/update.html.erb
+++ b/app/views/infos/update.html.erb
@@ -1,4 +1,4 @@
-<div class="contents row">
+<div class="contents">
     <div class="success">
         <h3>更新が完了しました。</h3>
         <a class="btn" href="/">お知らせ一覧へ戻る</a>
