--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <%# usersコントローラーshowアクションに対応するビューファイル %>
-    <div class="contents row">
+    <div class="contents">
         <p><%= @nickname %>さんのお知らせ一覧</p>
         <% @infos.each do |info| %>
             <%# マイページに部分テンプレートを適用 %>
