--- a/app/views/infos/create.html.erb
+++ b/app/views/infos/create.html.erb
@@ -1,4 +1,4 @@
-<div class="contents row">
+<div class="contents">
     <div class="success">
         <h3>お知らせ投稿が完了しました。</h3>
         <a class="btn" href="/">お知らせ投稿一覧へ戻る</a>
