--- a/app/views/infos/edit.html.erb
+++ b/app/views/infos/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="contents row">
+<div class="contents">
     <div class="container">
         <h3>編集する</h3>
         <%= render partial: "form", locals: { info: @info } %>
