--- a/app/views/credit_card_payments/index.html.erb
+++ b/app/views/credit_card_payments/index.html.erb
@@ -17,7 +17,7 @@
         <%= f.text_field :period, class:"price", placeholder:"例)2023" %>
         <%= f.label :note, "備考欄" %>
         <%= f.text_field :note, class:"price", placeholder:"例)領収書お願いします。等" %>
-        <%= image_tag 'fapiao.jpeg', size: "300x150"%>
+        <%= image_tag 'fapiao.jpg', size: "300x150"%>
     </div>
 
     <%# クレジットカード情報の入力欄 %>
